# scikit-monaco

./: .gitignore  LICENSE.txt  pyproject.toml  requirements.txt  setup.py
skmonaco/: __init__.py  _core.c  _core.pxd  _core.pyx  _mc.c  _mc.pyx  _miser.c  _miser.pyx
testing-post-installation/: example.py
